Only look for PGO package if build mode targeted; add packages.config dependency to ease restoration (#11981)
Only look for PGO package if build mode targeted; add packages.config dependency to ease restoration

## PR Checklist
* [x] Closes #11978 
* [x] CLA signed. If not, go over [here](https://cla.opensource.microsoft.com/microsoft/Terminal) and sign the CLA
* [x] Test of restore and build on fresh repo copy passed.

--- a/src/common.build.pre.props
+++ b/src/common.build.pre.props
@@ -179,7 +179,7 @@
   <!-- Install an empty one for projects that won't have one.
        The following import will override it when it needs to happen. -->
   <Target Name="MergePGOCounts" />
-  <Import Condition="'$(PgoTarget)' == 'true' And '$(Platform)'=='x64'" Project="$(SolutionDir)\build\PGO\Terminal.PGO.props" />
+  <Import Condition="'$(PgoTarget)' == 'true' And '$(Platform)'=='x64' And '$(PGOBuildMode)'!=''" Project="$(SolutionDir)\build\PGO\Terminal.PGO.props" />
 
   <!-- For Win32 (x86) ONLY ... we use all defaults for AMD64. No def for those. -->
   <ItemDefinitionGroup Condition="'$(Platform)'=='Win32'">
