--- a/common.openconsole.props
+++ b/common.openconsole.props
@@ -10,4 +10,18 @@
     <OpenConsoleDir>$(MSBuildThisFileDirectory)</OpenConsoleDir>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <!--
+    For the Windows 10 build, we're targeting the prerelease version of Microsoft.UI.Xaml.
+    This version emits every XAML DLL directly into our package.
+    This is a workaround for us not having deliverable MSFT-21242953 on this version of Windows.
+    -->
+    <TerminalMUXVersion>2.7.0-prerelease.210913003</TerminalMUXVersion>
+    <!--
+    For the Windows 11-specific build, we're targeting the public version of Microsoft.UI.Xaml.
+    This version emits a package dependency instead of embedding the dependency in our own package.
+    -->
+    <TerminalMUXVersion Condition="'$(TerminalTargetWindowsVersion)'=='Win11'">2.7.0</TerminalMUXVersion>
+  </PropertyGroup>
+
 </Project>
