--- a/src/terminal/adapter/ut_adapter/Adapter.UnitTests.vcxproj
+++ b/src/terminal/adapter/ut_adapter/Adapter.UnitTests.vcxproj
@@ -28,6 +28,9 @@
     <ProjectReference Include="..\..\..\interactivity\base\lib\InteractivityBase.vcxproj">
       <Project>{06ec74cb-9a12-429c-b551-8562ec964846}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\renderer\base\lib\base.vcxproj">
+      <Project>{af0a096a-8b3a-4949-81ef-7df8f0fee91f}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\types\lib\types.vcxproj">
       <Project>{18d09a24-8240-42d6-8cb6-236eee820263}</Project>
     </ProjectReference>
