Don't comment on commits, cause no one's using that (#13616)
As discussed on teams. 

Refer to https://github.com/check-spelling/check-spelling/issues/23#issuecomment-1195826414

--- a/.github/workflows/spelling2.yml
+++ b/.github/workflows/spelling2.yml
@@ -37,7 +37,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    if: (success() || failure()) && needs.spelling.outputs.followup
+    if: (success() || failure()) && needs.spelling.outputs.followup && github.event_name != 'push'
     steps:
     - name: comment
       uses: check-spelling/check-spelling@v0.0.20
