--- a/src/common.nugetversions.targets
+++ b/src/common.nugetversions.targets
@@ -14,7 +14,7 @@
         Azure DevOps builds, a NuGet Restore pipeline task is run against the [packages.config] file instead.-->
 
   <PropertyGroup>
-    <Terminal_NuGetEXE>$(SolutionDir)dep\nuget\nuget.exe</Terminal_NuGetEXE>
+    <Terminal_NuGetEXE>&quot;$(SolutionDir)dep\nuget\nuget.exe&quot;</Terminal_NuGetEXE>
     <Terminal_GlobalPackagesConfigPath>$(SolutionDir)dep\nuget\packages.config</Terminal_GlobalPackagesConfigPath>
   </PropertyGroup>
 
